@@ -60,9 +60,25 @@ using System.Text;
 using Mono.Unix;
 
 [assembly:Mono.Unix.IncludeAttribute (
-	new string [] {"sys/types.h", "sys/stat.h", "sys/poll.h", "sys/wait.h",
-		"unistd.h", "fcntl.h", "signal.h", "poll.h", "grp.h", "errno.h", "syslog.h"}, 
-	new string [] {"_GNU_SOURCE", "_XOPEN_SOURCE"})]
+	new string [] {
+		"sys/types.h", 
+		"sys/stat.h", 
+		"ah:sys/poll.h", 
+		"ah:sys/wait.h",
+		"ah:sys/statvfs.h",
+		"ah:sys/xattr.h",
+		"unistd.h", 
+		"fcntl.h", 
+		"signal.h", 
+		"ah:poll.h", 
+		"ah:grp.h", 
+		"errno.h", 
+		"ah:syslog.h",
+	}, 
+	new string [] {
+		"_GNU_SOURCE", 
+		"_XOPEN_SOURCE",
+	})]
 
 namespace Mono.Unix {
 
